Enable preview features, add visitor print